--- a/src/toDo.css
+++ b/src/toDo.css
@@ -17,9 +17,9 @@ h3 {
 color: red;
 }
 #mainBox {
-width: 40%;
+width: 35%;
 float: left;
-margin-left: 25%;
+margin-left: 30%;
 }
 #mainlist {
 border: 3px solid blue;
@@ -39,7 +39,7 @@ float: right;
 width: 30%;
 }
 fieldset {
-
+border-radius: 5px;
 }
 p {
 margin: 5px 0;
@@ -48,10 +48,11 @@ margin: 5px 0;
 
 }
 .high-priority {
-background-color: hsl(0, 70%, 60%);
+background-color: hsl(0, 75%, 75%);
 }
 .medium-priority {
 background-color: hsl(40, 100%, 70%);
 }
 .low-priority {
+background-color: hsl(120, 70%, 80%);
 }
