--- a/src/toDo.css
+++ b/src/toDo.css
@@ -62,6 +62,15 @@ margin-left: 57%
 li {
 margin: 10px 0;
 font-size: 1.1rem;
+text-decoration: none;
+}
+a:active, a:focus {
+font-size: 1.3rem;
+font-weight: bold;    
+}
+a, a:visited, a:active {
+text-decoration: none;
+color: currentColor;
 }
 #addItemBox {
 position: fixed;
