--- a/src/toDo.css
+++ b/src/toDo.css
@@ -4,6 +4,9 @@ height: 100%;
 margin: 0;
 padding: 0;
 }
+* {
+box-sizing: content-box;
+}
 body {
 text-align: center;
 color: blue;
@@ -13,7 +16,7 @@ margin: 0;
 position: relative;
 width: 100%;
 height: 100%;
-font-size: 16px
+font-size: 18px
 }
 h1 {
 margin: 20px auto 40px;
@@ -49,22 +52,27 @@ padding: 3px;
 }
 summary {
 font-weight: bold;
+/*text-decoration: line-through black 4px;*/
 }
 [type="checkbox"] {
-margin-left: 75%;
-margin-bottom: 1px;
-height: 15px;
-width: 15px
+position: absolute;
+bottom: -8px; 
+right: 1px;
+height: 13px;
+width: 13px;
 }
 .smaller-left-margin {
-margin-left: 57%
+margin-left: 57%;
 }
-li {
+#mylists li {
 margin: 10px 0;
-font-size: 1.1rem;
+font-size: 1.2rem;
 text-decoration: none;
+width: 90%;
+border: 2px solid black;
+position: relative;
 }
-a:active, a:focus {
+a:active, a:focus, li:focus {
 font-size: 1.3rem;
 font-weight: bold;    
 }
@@ -127,12 +135,15 @@ overflow: auto;
 list-style: square inside;
 text-align: left;
 }
-#addListButton, button {
+#addListButton, #addButton {
 background-color: blue;
 color: white;
 margin: 12px 0;
 padding: 4px;
 border-radius: 3px;
+}
+details p {
+/*text-decoration: line-through black 4px;*/
 }
 #listName, #listName:focus {
 background-color: transparent;
@@ -141,4 +152,46 @@ outline: none;
 border-bottom: 2px solid blue;
 margin: 10px;
 }
- 
+.delete {
+appearance: none;
+-moz-appearance: none;
+border: none;
+position: absolute;
+right: 1px;
+top: 1px;
+background-color: red;
+color: white;
+height: 16px;
+width: 16px;
+padding: 1px;
+font: bolder 1rem;
+text-align: center;
+vertical-align: middle;
+cursor: pointer;
+border: 1px solid white;
+}
+.delete-li {
+color: white;
+background-color: red;
+width: 17px;
+height: 17px;
+border: none;
+position: relative;
+left: 20%;
+top: 0px;
+font-weight: bold;
+font-size: 1rem;
+margin-left: 20px;
+cursor: pointer;
+border: 2px solid white;
+border-radius: 30%;
+}
+.toDoBox {
+position: relative;    
+}
+.complete {
+position: absolute;
+bottom: -12px;
+right: 25px;
+font: inherit;
+}
