--- a/src/toDo.css
+++ b/src/toDo.css
@@ -242,3 +242,29 @@ cursor: pointer;
 border: 1px solid black;
 border-radius: 30%;
 }
+#topNavBar {
+width: 100%;
+border-bottom: 3px solid blue;
+position: fixed;
+top: 0;
+width: 100%;
+height: 19vh;
+z-index: 2;
+text-align: center;
+background-color: inherit;
+}
+#mainBox.mobile {
+width: 80vw;
+height: 55vh;
+margin: auto;
+z-index: 1;
+position: absolute;
+left: 10vw;
+bottom: 10vh;
+}
+#addItemBox.mobile.hidden {
+display: none;
+}
+#lists-sidebar.mobile.hidden {
+display: none;
+}
