--- a/src/toDo.css
+++ b/src/toDo.css
@@ -1,6 +1,5 @@
 html {
-width: 100%;
-height: 100%;
+width: 100vw;
 font-size: 17px;
 --myBlue: rgb(11, 11, 167);
 }
@@ -14,20 +13,25 @@ text-align: center;
 color: var(--myBlue);
 background-color: hsl(60, 100%, 85%);
 padding: 0;
-margin: 0;
+margin: 5px;
 position: relative;
 width: 100%;
-height: 100%;
+height: auto;
+overflow: auto;
+z-index: 0;
+/*border: 2px solid rebeccapurple;*/
 }
 h1 {
 margin: 15px auto 40px;
 color: ;
 font-size: 2rem;
+z-index: 3;
 }
 h2 {
 color: ;
 font-size: 1.6rem;
 margin-bottom: 20px;
+z-index: 1;
 }
 h3 {
 color: ;
@@ -40,10 +44,11 @@ font-size: 1.2rem;
 margin: 15px 0 10px;
 }
 #mainBox {
-width: 40%;
+width: 40vw;
 position: relative;
-left: 22%;
-margin-left: 3%;
+left: 22vw;
+margin-left: 3vw;
+/*border: 2px solid slateblue;*/
 }
 #mainlist {
 border: 3px solid blue;
@@ -91,11 +96,12 @@ margin: 5px 0 0;
 margin-left: 57%;
 }
 #sortBox {
-position: fixed;
-right: 8%;
-top: 21%;
-width: 25%;
+position: sticky;
+bottom: 75vh;
+left: 70vw;
+width: 25vw;
 text-align: center;
+/*border: 2px solid red;*/
 }
 #sortBox label {
 margin-right: 10px;
@@ -118,11 +124,13 @@ height: 22px;
 padding: 3px;
 }
 #addItemBox {
-position: fixed;
-right: 20px;
-top: 35%;
+position: sticky;
+left: 68%;
+height: 50vh;
+bottom: 20vh;
 width: 30%;
 color: blue;
+margin-top: 10px;
 }
 fieldset {
 border-radius: 5px;
@@ -168,8 +176,8 @@ background-color: hsl(120, 70%, 80%);
 }
 #lists-sidebar {
 border-right: 4px solid blue;
-height: 80%;
-width: 20%;
+height: 80vh;
+width: 20vw;
 position: fixed;
 left: 5px;
 bottom: 10px;
@@ -247,24 +255,31 @@ width: 100%;
 border-bottom: 3px solid blue;
 position: fixed;
 top: 0;
-width: 100%;
-height: 19vh;
+height: max(16vh, 125px);
 z-index: 2;
 text-align: center;
 background-color: inherit;
+overflow: auto;
 }
 #mainBox.mobile {
 width: 80vw;
-height: 55vh;
-margin: auto;
+margin: 5vh auto;
 z-index: 1;
 position: absolute;
 left: 10vw;
-bottom: 10vh;
+top: 30vh;
 }
-#addItemBox.mobile.hidden {
+#sortBox.mobile {
+position: absolute;
+top: 25vh;
+width: fit-content;
+left: 20vw;
+z-index: 1;
+height: fit-content;
+}
+#addItemBox.mobile {
 display: none;
 }
-#lists-sidebar.mobile.hidden {
+#lists-sidebar.mobile {
 display: none;
 }
