--- a/src/toDo.css
+++ b/src/toDo.css
@@ -30,7 +30,7 @@ z-index: 3;
 h2 {
 color: ;
 font-size: 1.6rem;
-margin-bottom: 20px;
+margin-bottom: 30px;
 z-index: 1;
 }
 h3 {
@@ -255,7 +255,7 @@ width: 100%;
 border-bottom: 3px solid blue;
 position: fixed;
 top: 0;
-height: max(16vh, 125px);
+height: max(15vh, 125px);
 z-index: 2;
 text-align: center;
 background-color: inherit;
@@ -267,11 +267,14 @@ margin: 5vh auto;
 z-index: 1;
 position: absolute;
 left: 10vw;
-top: 30vh;
+/*top: clamp(21vh, 27vh, 35vh);*/
+top: max(25vh, 190px);
 }
 #sortBox.mobile {
 position: absolute;
-top: 25vh;
+/* good mobile values:
+top: clamp(18vh, 23vh, 28vh);*/
+top: max(20vh, 150px);
 width: fit-content;
 left: 20vw;
 z-index: 1;
@@ -282,4 +285,33 @@ display: none;
 }
 #lists-sidebar.mobile {
 display: none;
+}
+#innerNav {
+width: 80%;
+position: absolute;
+bottom: 0;
+height: 37%;
+margin: 0 10%;
+box-sizing: content-box;
+border-top: 2px solid blue;
+border-left: 2px solid blue;
+border-right: 2px solid blue;
+border-radius: 4px;
+background-color: blue;
+}
+.mobile-button {
+background-color: azure;
+color: var(--myBlue);
+width: 50%;
+float: left;
+height: 100%;
+box-sizing: border-box;
+border: 2px solid blue;
+font-size: 1.1rem;
+cursor: pointer;
+border-radius: 4px;
+}
+.mobile-button:hover, .mobile-button:active, .mobile-button:focus {
+text-shadow: 1px 1px 2px white;
+background-color: rgb(12, 244, 248);
 }
