--- a/src/toDo.css
+++ b/src/toDo.css
@@ -267,24 +267,47 @@ margin: 5vh auto;
 z-index: 1;
 position: absolute;
 left: 10vw;
-/*top: clamp(21vh, 27vh, 35vh);*/
 top: max(25vh, 190px);
 }
 #sortBox.mobile {
 position: absolute;
-/* good mobile values:
-top: clamp(18vh, 23vh, 28vh);*/
 top: max(20vh, 150px);
 width: fit-content;
 left: 20vw;
 z-index: 1;
 height: fit-content;
 }
-#addItemBox.mobile {
-display: none;
+#lists-sidebar.mobile-slide, #addItemBox.mobile-slide {
+width: 60vw;
+position: absolute;
+top: max(18vh, 150px);
+height: fit-content;
+border: 4px solid dodgerblue;
+z-index: 2;
+background-color: inherit;
+border-radius: 5px;
+overflow: auto;
+padding: 20px;
+box-sizing: border-box;
+visibility: hidden;
+transition: visibility 100ms;
 }
-#lists-sidebar.mobile {
-display: none;
+#lists-sidebar.mobile-slide {
+left: -100%;
+transition: left 1s;
+}
+#lists-sidebar.mobile-slide.visible, #addItemBox.mobile-slide.visible {
+left: 20vw;
+visibility: visible;
+position: absolute;
+}
+#addItemBox.mobile-slide {
+position: fixed;
+left: 100%;
+transition: left 1s;
+}
+#addItemBox.mobile-slide fieldset {
+border: none;
 }
 #innerNav {
 width: 80%;
