--- a/src/toDo.css
+++ b/src/toDo.css
@@ -2,6 +2,8 @@ html {
 width: 100vw;
 font-size: 17px;
 --myBlue: rgb(11, 11, 167);
+--variableHeight: max(15vh, 125px);
+--myYellow: hsl(60, 100%, 85%);
 }
 * {
 box-sizing: content-box;
@@ -255,10 +257,10 @@ width: 100%;
 border-bottom: 3px solid blue;
 position: fixed;
 top: 0;
-height: max(15vh, 125px);
-z-index: 2;
+height: var(--variableHeight);
+z-index: 3;
 text-align: center;
-background-color: inherit;
+background-color: var(--myYellow);
 overflow: auto;
 }
 #mainBox.mobile {
@@ -283,8 +285,8 @@ position: absolute;
 top: max(18vh, 150px);
 height: fit-content;
 border: 4px solid dodgerblue;
-z-index: 2;
-background-color: inherit;
+z-index: 3;
+background-color: hsl(60, 100%, 85%);
 border-radius: 5px;
 overflow: auto;
 padding: 20px;
@@ -337,4 +339,24 @@ border-radius: 4px;
 .mobile-button:hover, .mobile-button:active, .mobile-button:focus {
 text-shadow: 1px 1px 2px white;
 background-color: rgb(12, 244, 248);
+}
+#overlay {
+width: 100%;
+height: 100vh;
+position: fixed;
+top: calc(var(--variableHeight) - 3px);
+background-color: rgb(78, 78, 78);
+z-index: 2;
+opacity: 0.8;
+}
+.close-button {
+color: dodgerblue;
+background-color: white;
+border: 3px solid dodgerblue;
+height: 6vh;
+width: 11vw;
+border-radius: 5px;
+font-size: 1rem;
+margin: 25px auto 15px;
+cursor: pointer;
 }
