--- a/src/toDo.css
+++ b/src/toDo.css
@@ -13,7 +13,7 @@ padding: 0;
 body {
 text-align: center;
 color: var(--myBlue);
-background-color: hsl(60, 100%, 85%);
+background-color: var(--myYellow);
 padding: 0;
 margin: 5px;
 position: relative;
@@ -21,27 +21,22 @@ width: 100%;
 height: auto;
 overflow: auto;
 z-index: 0;
-/*border: 2px solid rebeccapurple;*/
 }
 h1 {
 margin: 15px auto 40px;
-color: ;
 font-size: 2rem;
 z-index: 3;
 }
 h2 {
-color: ;
 font-size: 1.6rem;
 margin-bottom: 30px;
 z-index: 1;
 }
 h3 {
-color: ;
 font-size: 1.4rem;
 margin-bottom: 20px;
 }
 h4 {
-color: ;
 font-size: 1.2rem;
 margin: 15px 0 10px;
 }
@@ -50,7 +45,6 @@ width: 40vw;
 position: relative;
 left: 22vw;
 margin-left: 3vw;
-/*border: 2px solid slateblue;*/
 }
 #mainlist {
 border: 3px solid blue;
@@ -63,6 +57,19 @@ text-align: left;
 list-style-type: Arabic;
 padding: 4px 2px 1px 3px;
 }
+#clearButton {
+margin: 25px 0 20px;
+position: absolute;
+left: 5%;
+background-color: transparent;
+border: none;
+cursor: pointer;
+font-weight: bold;
+color: inherit;
+/*text-decoration: underline solid blue 1px;*/
+font-size: 0.95rem;
+text-shadow: 1px 1px 0px white, -1px -1px 0px white,  1px 1px 0 blue, -1px -1px 0 blue;
+}
 .toDoBox {
 position: relative;    
 font-size: 1rem;
@@ -73,20 +80,24 @@ margin-bottom: 7px;
 font-size: 1.1rem;
 transition: text-decoration 1s;
 }
-summary.complete {
+summary.complete, details p.complete {
 text-decoration: line-through black 4px;
 }
-details p.complete {
-text-decoration: line-through black 4px;
+p {
+margin: 10px 0;
+color: iherit;
+font-size: 1rem;
 }
 .dueDate {
 margin: 3px 0;
+color: initial;
 }
 .completeLabel {
 position: absolute;
 bottom: -3px;
 right: 0px;
 font: inherit;
+color: inherit;
 }
 input[type="checkbox"] {
 height: 16px;
@@ -94,16 +105,12 @@ width: 16px;
 border: 1px solid black;
 margin: 5px 0 0;
 }
-.smaller-left-margin {
-margin-left: 57%;
-}
 #sortBox {
 position: sticky;
 bottom: 75vh;
 left: 70vw;
 width: 25vw;
 text-align: center;
-/*border: 2px solid red;*/
 }
 #sortBox label {
 margin-right: 10px;
@@ -153,27 +160,13 @@ display: inline-block;
 margin-left: 15px;
 border: 1px solid black;
 }
-#red-box {
+#red-box, .high-priority {
 background-color: hsl(0, 70%, 80%);
 }
-#orange-box {
+#orange-box, .medium-priority {
 background-color: hsl(40, 100%, 70%);
 }
-#green-box {
-background-color: hsl(120, 70%, 80%);
-}
-p {
-margin: 10px 0;
-color: black;
-font-size: 1rem;
-}
-.high-priority {
-background-color: hsl(0, 70%, 80%);
-}
-.medium-priority {
-background-color: hsl(40, 100%, 70%);
-}
-.low-priority {
+#green-box, .low-priority {
 background-color: hsl(120, 70%, 80%);
 }
 #lists-sidebar {
@@ -207,10 +200,18 @@ color: currentColor;
 #addListButton, #addButton {
 background-color: blue;
 color: white;
-margin: 12px 0;
-padding: 4px;
+margin: 13px 0 16px;
+padding: 5px;
 border-radius: 3px;
 font-size: 0.9rem;
+border: 2px solid white;
+outline: 1px solid blue;
+}
+#addListButton:hover, #addButton:hover {
+color: blue;
+background-color: white;
+cursor: pointer;
+border: 2px solid blue;
 }
 #listName, #listName:focus {
 background-color: transparent;
@@ -286,7 +287,7 @@ top: max(18vh, 150px);
 height: fit-content;
 border: 4px solid dodgerblue;
 z-index: 3;
-background-color: hsl(60, 100%, 85%);
+background-color: var(--myYellow);
 border-radius: 5px;
 overflow: auto;
 padding: 20px;
@@ -350,13 +351,22 @@ z-index: 2;
 opacity: 0.8;
 }
 .close-button {
+box-sizing: border-box;
 color: dodgerblue;
 background-color: white;
 border: 3px solid dodgerblue;
-height: 6vh;
+height: max(7vh, 35px);
 width: 11vw;
+padding: 6px;
+vertical-align: middle;
 border-radius: 5px;
 font-size: 1rem;
-margin: 25px auto 15px;
+margin: 20px auto 15px;
 cursor: pointer;
+}
+.close-button:hover {
+border: 2px solid white;
+outline: 1px solid dodgerblue;
+color: white;
+background-color: dodgerblue;
 }
