Minor style change.

--- a/src/toDo.css
+++ b/src/toDo.css
@@ -356,7 +356,7 @@ color: dodgerblue;
 background-color: white;
 border: 3px solid dodgerblue;
 height: max(7vh, 35px);
-width: 11vw;
+width: 50px;
 padding: 6px;
 vertical-align: middle;
 border-radius: 5px;
