Added top ribbon and repositioned elements in relation to it.

--- a/src/toDo.css
+++ b/src/toDo.css
@@ -3,6 +3,7 @@ width: 100vw;
 font-size: 17px;
 --myBlue: rgb(11, 11, 167);
 --variableHeight: max(15vh, 125px);
+--variableHeight2: max(40px, 9vh);
 --myYellow: hsl(60, 100%, 85%);
 }
 * {
@@ -14,22 +15,19 @@ body {
 text-align: center;
 color: var(--myBlue);
 background-color: var(--myYellow);
-padding: 0;
-margin: 5px;
 position: relative;
 width: 100%;
 height: auto;
 overflow: auto;
-z-index: 0;
+z-index: 1;
 }
 h1 {
-margin: 15px auto 40px;
+margin: auto;
 font-size: 2rem;
-z-index: 3;
 }
 h2 {
 font-size: 1.6rem;
-margin-bottom: 30px;
+margin: 35px 0 30px;
 z-index: 1;
 }
 h3 {
@@ -40,9 +38,21 @@ h4 {
 font-size: 1.2rem;
 margin: 15px 0 10px;
 }
+#title-bar {
+width: 100vw;
+background-color: azure;
+height: var(--variableHeight2);
+position: fixed;
+top: 0;
+padding: 15px 0 12px;
+border-bottom: 5px solid blue;
+box-shadow: 0px -5px 10px 5px white inset;
+z-index: 3;
+}
 #mainBox {
 width: 40vw;
 position: relative;
+top: 80px;
 left: 22vw;
 margin-left: 3vw;
 }
@@ -119,12 +129,29 @@ width: 16px;
 border: 1px solid black;
 margin: 5px 0 0;
 }
-#sortBox {
+#right-sidebar {
 position: sticky;
-bottom: 75vh;
+/*top: calc(var(--variableHeight2) + 60px);*/
+bottom: 12vh;
+z-index: 2;
+left: 67vw;
+width: fit-content;
+border: 2px solid red;
+height: max-content;
+padding: 0;
+}
+/*#sortBox {
+position: fixed;
+top: calc(var(--variableHeight2) + 60px);
 left: 70vw;
 width: 25vw;
 text-align: center;
+z-index: 2;
+}*/
+#sortBox {
+text-align: center;
+z-index: 3;
+width: 25vw;
 }
 #sortBox label {
 margin-right: 10px;
@@ -140,13 +167,11 @@ height: 22px;
 padding: 3px;
 }
 #addItemBox {
-position: sticky;
-left: 68%;
 height: 50vh;
-bottom: 20vh;
-width: 30%;
+width: 30vw;
 color: blue;
-margin-top: 10px;
+margin-top: 20px;
+z-index: 3;
 }
 fieldset {
 border-radius: 5px;
@@ -179,12 +204,13 @@ background-color: hsl(120, 70%, 80%);
 }
 #lists-sidebar {
 border-right: 4px solid blue;
-height: 80vh;
+height: 75vh;
 width: 20vw;
 position: fixed;
 left: 5px;
 bottom: 10px;
 overflow: auto;
+z-index: 2;
 }
 #mylists {
 list-style: square inside;
@@ -378,3 +404,4 @@ outline: 1px solid dodgerblue;
 color: white;
 background-color: dodgerblue;
 }
+
