--- a/src/toDo.css
+++ b/src/toDo.css
@@ -3,7 +3,7 @@ width: 100vw;
 font-size: 17px;
 --myBlue: rgb(11, 11, 167);
 --variableHeight: max(15vh, 125px);
---variableHeight2: max(40px, 9vh);
+--variableHeight2: 45px;
 --myYellow: hsl(60, 100%, 85%);
 }
 * {
@@ -62,7 +62,6 @@ min-height: 20px;
 }
 #mainlist .listItem {
 border-bottom: 6px double blue;
-margin: 0;
 text-align: left;
 list-style-type: Arabic;
 padding: 4px 2px 1px 3px;
@@ -131,22 +130,11 @@ margin: 5px 0 0;
 }
 #right-sidebar {
 position: sticky;
-/*top: calc(var(--variableHeight2) + 60px);*/
 bottom: 12vh;
 z-index: 2;
 left: 67vw;
 width: fit-content;
-border: 2px solid red;
-padding: 0;
 }
-/*#sortBox {
-position: fixed;
-top: calc(var(--variableHeight2) + 60px);
-left: 70vw;
-width: 25vw;
-text-align: center;
-z-index: 2;
-}*/
 #sortBox {
 text-align: center;
 z-index: 3;
@@ -234,11 +222,12 @@ color: currentColor;
 background-color: blue;
 color: white;
 margin: 13px 0 16px;
-padding: 5px;
+padding: 5px 6px;
 border-radius: 3px;
 font-size: 0.9rem;
 border: 2px solid white;
 outline: 1px solid blue;
+height: 22px;
 }
 #addListButton:hover, #addButton:hover {
 color: blue;
@@ -293,7 +282,7 @@ border-bottom: 3px solid blue;
 position: fixed;
 top: 0;
 height: var(--variableHeight);
-z-index: 3;
+z-index: 4;
 text-align: center;
 background-color: azure;
 overflow: auto;
@@ -309,7 +298,7 @@ top: max(25vh, 190px);
 }
 #sortBox.mobile {
 position: absolute;
-top: max(20vh, 150px);
+top: max(23vh, 170px);
 width: fit-content;
 left: 20vw;
 z-index: 1;
@@ -353,7 +342,6 @@ position: absolute;
 bottom: 0;
 height: 37%;
 margin: 0 10%;
-box-sizing: content-box;
 border-top: 2px solid blue;
 border-left: 2px solid blue;
 border-right: 2px solid blue;
@@ -390,7 +378,7 @@ box-sizing: border-box;
 color: dodgerblue;
 background-color: white;
 border: 3px solid dodgerblue;
-height: max(7vh, 37px);
+height: 40px;
 width: 75px;
 padding: 6px;
 vertical-align: middle;
@@ -405,4 +393,3 @@ outline: 1px solid dodgerblue;
 color: white;
 background-color: dodgerblue;
 }
-
