--- a/src/toDo.css
+++ b/src/toDo.css
@@ -1,395 +1,409 @@
 html {
-width: 100vw;
-font-size: 17px;
---myBlue: rgb(11, 11, 167);
---variableHeight: max(15vh, 125px);
---variableHeight2: 45px;
---myYellow: hsl(60, 100%, 85%);
+  width: 100vw;
+  font-size: 17px;
+  --myBlue: rgb(11, 11, 167);
+  --variableHeight: max(15vh, 125px);
+  --variableHeight2: 45px;
+  --myYellow: hsl(60, 100%, 85%);
 }
 * {
-box-sizing: content-box;
-margin: 0;
-padding: 0;
+  box-sizing: content-box;
+  margin: 0;
+  padding: 0;
 }
 body {
-text-align: center;
-color: var(--myBlue);
-background-color: var(--myYellow);
-position: relative;
-width: 100%;
-height: auto;
-overflow: auto;
-z-index: 1;
+  text-align: center;
+  color: var(--myBlue);
+  background-color: var(--myYellow);
+  position: relative;
+  width: 100%;
+  height: auto;
+  overflow: auto;
+  z-index: 1;
 }
 h1 {
-margin: auto;
-font-size: 2rem;
+  margin: auto;
+  font-size: 2rem;
 }
 h2 {
-font-size: 1.6rem;
-margin: 35px 0 30px;
-z-index: 1;
+  font-size: 1.6rem;
+  margin: 35px 0 30px;
+  z-index: 1;
 }
 h3 {
-font-size: 1.4rem;
-margin-bottom: 20px;
+  font-size: 1.4rem;
+  margin-bottom: 20px;
 }
 h4 {
-font-size: 1.2rem;
-margin: 15px 0 10px;
+  font-size: 1.2rem;
+  margin: 15px 0 10px;
 }
 #title-bar {
-width: 100vw;
-background-color: azure;
-height: var(--variableHeight2);
-position: fixed;
-top: 0;
-padding: 3.5vh 0 12px;
-border-bottom: 3px solid blue;
-box-shadow: 0px -5px 10px 5px white inset;
-z-index: 3;
+  width: 100vw;
+  background-color: azure;
+  height: var(--variableHeight2);
+  position: fixed;
+  top: 0;
+  padding: 3.5vh 0 12px;
+  border-bottom: 3px solid blue;
+  box-shadow: 0px -5px 10px 5px white inset;
+  z-index: 3;
 }
 #mainBox {
-width: 40vw;
-position: relative;
-top: 80px;
-left: 22vw;
-margin-left: 3vw;
+  width: 40vw;
+  position: relative;
+  top: 80px;
+  left: 22vw;
+  margin-left: 3vw;
 }
 #mainlist {
-border: 3px solid blue;
-min-height: 20px;
+  border: 3px solid blue;
+  min-height: 20px;
 }
 #mainlist .listItem {
-border-bottom: 6px double blue;
-text-align: left;
-list-style-type: Arabic;
-padding: 4px 2px 1px 3px;
+  border-bottom: 6px double blue;
+  text-align: left;
+  list-style-type: Arabic;
+  padding: 4px 2px 1px 3px;
 }
 #clearButton {
-margin: 25px 0 5vh;
-position: absolute;
-left: 5%;
-padding: 7px 10px;
-background-color: transparent;
-border: none;
-cursor: pointer;
-font-weight: bold;
-color: inherit;
-font-size: 0.95rem;
-text-shadow: 1px 1px 0px white, -1px -1px 0px white,  1px 1px 0 blue, -1px -1px 0 blue;
+  margin: 25px 0 5vh;
+  position: absolute;
+  left: 5%;
+  padding: 7px 10px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  color: inherit;
+  font-size: 0.95rem;
+  text-shadow: 1px 1px 0px white, -1px -1px 0px white, 1px 1px 0 blue,
+    -1px -1px 0 blue;
 }
 #clearButton:hover {
-background-color: azure;
-border-radius: 20px;
+  background-color: azure;
+  border-radius: 20px;
 }
 #clearButton:focus {
-outline: none;
+  outline: none;
 }
 .toDoBox {
-position: relative;    
-font-size: 1rem;
+  position: relative;
+  font-size: 1rem;
 }
 summary {
-font-weight: bold;
-margin-bottom: 7px;
-font-size: 1.1rem;
-transition: text-decoration 1s;
-word-wrap: break-word;
+  font-weight: bold;
+  margin-bottom: 7px;
+  font-size: 1.1rem;
+  transition: text-decoration 1s;
+  word-wrap: break-word;
 }
 details p {
-word-wrap: break-word;
+  word-wrap: break-word;
 }
 summary.complete {
-text-decoration: line-through black 4px;
+  text-decoration: line-through black 4px;
 }
 details p.complete {
-text-decoration: line-through black 2px;
+  text-decoration: line-through black 2px;
 }
 p {
-margin: 10px 0;
-color: iherit;
-font-size: 1rem;
+  margin: 10px 0;
+  color: iherit;
+  font-size: 1rem;
 }
 .dueDate {
-margin: 3px 0;
-color: initial;
+  margin: 3px 0;
+  color: initial;
 }
 .completeLabel {
-position: absolute;
-bottom: -3px;
-right: 0px;
-font: inherit;
-color: inherit;
+  position: absolute;
+  bottom: -3px;
+  right: 0px;
+  font: inherit;
+  color: inherit;
 }
 input[type="checkbox"] {
-height: 16px;
-width: 16px;
-border: 1px solid black;
-margin: 5px 0 0;
+  height: 16px;
+  width: 16px;
+  border: 1px solid black;
+  margin: 5px 0 0;
 }
 #right-sidebar {
-position: sticky;
-bottom: 12vh;
-z-index: 2;
-left: 67vw;
-width: fit-content;
+  position: sticky;
+  bottom: 12vh;
+  z-index: 2;
+  left: 67vw;
+  width: fit-content;
 }
 #sortBox {
-text-align: center;
-z-index: 3;
-width: 25vw;
+  text-align: center;
+  z-index: 3;
+  width: 25vw;
 }
 #sortBox label {
-margin-right: 10px;
-font-variant: small-caps;
-font-size: 1.2rem;
+  margin-right: 10px;
+  font-variant: small-caps;
+  font-size: 1.2rem;
 }
 select {
-background-color: azure;
-color: var(--myBlue);
-font-size: 0.9rem;
-border: 2px solid blue;
-height: 22px;
-padding: 3px;
+  background-color: azure;
+  color: var(--myBlue);
+  font-size: 0.9rem;
+  border: 2px solid blue;
+  height: 22px;
+  padding: 3px;
 }
 #addItemBox {
-height: 50vh;
-width: 30vw;
-color: blue;
-margin-top: 20px;
-z-index: 3;
+  height: 50vh;
+  width: 30vw;
+  color: blue;
+  margin-top: 20px;
+  z-index: 3;
 }
 fieldset {
-border-radius: 5px;
+  border-radius: 5px;
 }
 legend {
-font-size: 1.2rem;
-margin: 0 auto 15px;
+  font-size: 1.2rem;
+  margin: 0 auto 15px;
 }
 input {
-margin: 6px 0;
-font-size: 0.85rem;
-padding: 3px 2px;
-letter-spacing: 1px;
+  margin: 6px 0;
+  font-size: 0.85rem;
+  padding: 3px 2px;
+  letter-spacing: 1px;
 }
 .colour-code {
-width: 13px;
-height: 13px;
-display: inline-block;
-margin-left: 15px;
-border: 1px solid black;
+  width: 13px;
+  height: 13px;
+  display: inline-block;
+  margin-left: 15px;
+  border: 1px solid black;
 }
-#red-box, .high-priority {
-background-color: hsl(0, 70%, 80%);
+#red-box,
+.high-priority {
+  background-color: hsl(0, 70%, 80%);
 }
-#orange-box, .medium-priority {
-background-color: hsl(40, 100%, 70%);
+#orange-box,
+.medium-priority {
+  background-color: hsl(40, 100%, 70%);
 }
-#green-box, .low-priority {
-background-color: hsl(120, 70%, 80%);
+#green-box,
+.low-priority {
+  background-color: hsl(120, 70%, 80%);
 }
 #lists-sidebar {
-border-right: 4px solid blue;
-height: 75vh;
-width: 20vw;
-position: fixed;
-left: 5px;
-bottom: 10px;
-overflow: auto;
-z-index: 2;
+  border-right: 4px solid blue;
+  height: 75vh;
+  width: 20vw;
+  position: fixed;
+  left: 5px;
+  bottom: 10px;
+  overflow: auto;
+  z-index: 2;
 }
 #mylists {
-list-style: square inside;
-text-align: left;
+  list-style: square inside;
+  text-align: left;
 }
 #mylists li {
-margin: 12px 5px 12px 25px;
-font-size: 1.2rem;
-text-decoration: none;
-width: 70%;
-color: blue;
+  margin: 12px 5px 12px 25px;
+  font-size: 1.2rem;
+  text-decoration: none;
+  width: 70%;
+  color: blue;
 }
-a:active, a:focus, li:focus {
-font-size: 1.3rem;
-font-weight: bold;    
+a:active,
+a:focus,
+li:focus {
+  font-size: 1.3rem;
+  font-weight: bold;
 }
-a, a:visited, a:active {
-text-decoration: none;
-color: currentColor;
+a,
+a:visited,
+a:active {
+  text-decoration: none;
+  color: currentColor;
 }
-#addListButton, #addButton {
-background-color: blue;
-color: white;
-margin: 13px 0 16px;
-padding: 5px 6px;
-border-radius: 3px;
-font-size: 0.9rem;
-border: 2px solid white;
-outline: 1px solid blue;
-height: 22px;
+#addListButton,
+#addButton {
+  background-color: blue;
+  color: white;
+  margin: 13px 0 16px;
+  padding: 5px 6px;
+  border-radius: 3px;
+  font-size: 0.9rem;
+  border: 2px solid white;
+  outline: 1px solid blue;
+  height: 22px;
 }
-#addListButton:hover, #addButton:hover {
-color: blue;
-background-color: white;
-cursor: pointer;
-border: 2px solid blue;
+#addListButton:hover,
+#addButton:hover {
+  color: blue;
+  background-color: white;
+  cursor: pointer;
+  border: 2px solid blue;
 }
-#listName, #listName:focus {
-background-color: transparent;
-border: none;
-outline: none;
-border-bottom: 2px solid blue;
-margin: 10px;
-font-size: 0.9rem;
+#listName,
+#listName:focus {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  border-bottom: 2px solid blue;
+  margin: 10px;
+  font-size: 0.9rem;
 }
 .delete {
-appearance: none;
--moz-appearance: none;
-border: none;
-position: absolute;
-right: 1px;
-top: 1px;
-background-color: red;
-color: white;
-height: 15px;
-width: 15px;
-padding: 1px;
-font: bolder 1rem;
-text-align: center;
-vertical-align: middle;
-cursor: pointer;
-border: 1px solid white;
+  appearance: none;
+  -moz-appearance: none;
+  border: none;
+  position: absolute;
+  right: 1px;
+  top: 1px;
+  background-color: red;
+  color: white;
+  height: 15px;
+  width: 15px;
+  padding: 1px;
+  font: bolder 1rem;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 1px solid white;
 }
 .delete-li {
-color: white;
-background-color: red;
-width: 19px;
-height: 19px;
-border: none;
-float: right;
-font-weight: bold;
-font-size: 0.9rem;
-margin-top: 4px;
-cursor: pointer;
-border: 1px solid black;
-border-radius: 30%;
+  color: white;
+  background-color: red;
+  width: 19px;
+  height: 19px;
+  border: none;
+  float: right;
+  font-weight: bold;
+  font-size: 0.9rem;
+  margin-top: 4px;
+  cursor: pointer;
+  border: 1px solid black;
+  border-radius: 30%;
 }
 #topNavBar {
-box-sizing: border-box;
-width: 100%;
-border-bottom: 2px solid blue;
-position: fixed;
-top: 0;
-height: var(--variableHeight);
-z-index: 4;
-text-align: center;
-background-color: azure;
-overflow: auto;
-padding-top: 18px;
+  box-sizing: border-box;
+  width: 100%;
+  border-bottom: 2px solid blue;
+  position: fixed;
+  top: 0;
+  height: var(--variableHeight);
+  z-index: 4;
+  text-align: center;
+  background-color: azure;
+  overflow: auto;
+  padding-top: 18px;
 }
 #mainBox.mobile {
-width: 80vw;
-margin: 5vh auto;
-z-index: 1;
-position: absolute;
-left: 10vw;
-top: max(25vh, 190px);
+  width: 80vw;
+  margin: 5vh auto;
+  z-index: 1;
+  position: absolute;
+  left: 10vw;
+  top: max(25vh, 190px);
 }
 #sortBox.mobile {
-position: absolute;
-top: max(23vh, 170px);
-width: fit-content;
-left: 20vw;
-z-index: 1;
-height: fit-content;
+  position: absolute;
+  top: max(23vh, 170px);
+  width: fit-content;
+  left: 20vw;
+  z-index: 1;
+  height: fit-content;
 }
-#lists-sidebar.mobile-slide, #addItemBox.mobile-slide {
-width: 60vw;
-position: absolute;
-top: max(18vh, 150px);
-height: fit-content;
-border: 4px solid dodgerblue;
-z-index: 3;
-background-color: var(--myYellow);
-border-radius: 5px;
-overflow: auto;
-padding: 20px;
-box-sizing: border-box;
-visibility: hidden;
-transition: visibility 100ms;
+#lists-sidebar.mobile-slide,
+#addItemBox.mobile-slide {
+  width: 60vw;
+  position: absolute;
+  top: max(18vh, 150px);
+  height: fit-content;
+  border: 4px solid dodgerblue;
+  z-index: 3;
+  background-color: var(--myYellow);
+  border-radius: 5px;
+  overflow: auto;
+  padding: 20px;
+  box-sizing: border-box;
+  visibility: hidden;
+  transition: visibility 100ms;
 }
 #lists-sidebar.mobile-slide {
-left: -100%;
-transition: left 1s;
+  left: -100%;
+  transition: left 1s;
 }
-#lists-sidebar.mobile-slide.visible, #addItemBox.mobile-slide.visible {
-left: 20vw;
-visibility: visible;
-position: absolute;
+#lists-sidebar.mobile-slide.visible,
+#addItemBox.mobile-slide.visible {
+  left: 20vw;
+  visibility: visible;
+  position: absolute;
 }
 #addItemBox.mobile-slide {
-position: fixed;
-left: 100%;
-transition: left 1s;
+  position: fixed;
+  left: 100%;
+  transition: left 1s;
 }
 #addItemBox.mobile-slide fieldset {
-border: none;
+  border: none;
 }
 #innerNav {
-width: 80%;
-position: absolute;
-bottom: 0;
-height: 37%;
-margin: 0 10%;
-border: 1px solid blue;
-border-bottom: none;
-border-radius: 4px;
-background-color: blue;
+  width: 80%;
+  position: absolute;
+  bottom: 0;
+  height: 37%;
+  margin: 0 10%;
+  border: 1px solid blue;
+  border-bottom: none;
+  border-radius: 4px;
+  background-color: blue;
 }
 .mobile-button {
-background-color: aliceblue;
-color: var(--myBlue);
-width: 50%;
-float: left;
-height: 100%;
-box-sizing: border-box;
-border: 2px solid blue;
-font-size: 1.1rem;
-cursor: pointer;
-border-radius: 4px;
+  background-color: aliceblue;
+  color: var(--myBlue);
+  width: 50%;
+  float: left;
+  height: 100%;
+  box-sizing: border-box;
+  border: 2px solid blue;
+  font-size: 1.1rem;
+  cursor: pointer;
+  border-radius: 4px;
 }
-.mobile-button:hover, .mobile-button:active, .mobile-button:focus {
-text-shadow: 1px 1px 2px white;
-background-color: rgb(12, 244, 248);
+.mobile-button:hover,
+.mobile-button:active,
+.mobile-button:focus {
+  text-shadow: 1px 1px 2px white;
+  background-color: rgb(12, 244, 248);
 }
 #overlay {
-width: 100%;
-height: 100vh;
-position: fixed;
-top: calc(var(--variableHeight) - 3px);
-background-color: rgb(78, 78, 78);
-z-index: 2;
-opacity: 0.8;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: calc(var(--variableHeight) - 3px);
+  background-color: rgb(78, 78, 78);
+  z-index: 2;
+  opacity: 0.8;
 }
 .close-button {
-box-sizing: border-box;
-color: dodgerblue;
-background-color: white;
-border: 3px solid dodgerblue;
-height: 40px;
-width: 75px;
-padding: 6px;
-vertical-align: middle;
-border-radius: 5px;
-font-size: 1rem;
-margin: 20px auto 15px;
-cursor: pointer;
+  box-sizing: border-box;
+  color: dodgerblue;
+  background-color: white;
+  border: 3px solid dodgerblue;
+  height: 40px;
+  width: 75px;
+  padding: 6px;
+  vertical-align: middle;
+  border-radius: 5px;
+  font-size: 1rem;
+  margin: 20px auto 15px;
+  cursor: pointer;
 }
 .close-button:hover {
-border: 2px solid white;
-outline: 1px solid dodgerblue;
-color: white;
-background-color: dodgerblue;
+  border: 2px solid white;
+  outline: 1px solid dodgerblue;
+  color: white;
+  background-color: dodgerblue;
 }
-
