--- a/src/toDo.css
+++ b/src/toDo.css
@@ -46,7 +46,7 @@ h4 {
   top: 0;
   padding: 3.5vh 0 12px;
   border-bottom: 3px solid blue;
-  box-shadow: 0px -5px 10px 5px white inset;
+  box-shadow: 0px -3px 10px 1px white inset;
   z-index: 3;
 }
 #mainBox {
@@ -200,7 +200,7 @@ input {
   position: fixed;
   left: 5px;
   bottom: 10px;
-  overflow: auto;
+  overflow: scroll;
   z-index: 2;
 }
 #mylists {
@@ -406,4 +406,23 @@ a:active {
   outline: 1px solid dodgerblue;
   color: white;
   background-color: dodgerblue;
+}
+:not(.mobile) ::-webkit-scrollbar {
+  width: 15px;
+}
+:not(.mobile) ::-webkit-scrollbar-track {
+  background: azure;
+  border-radius: 10px;   
+}
+:not(.mobile) ::-webkit-scrollbar-thumb {
+  background: dodgerblue;
+  border-radius: 10px;
+  border: 1px solid var(--myBlue);
+}
+:not(.mobile) ::-webkit-scrollbar-corner {
+  background-color: var(--myBlue);
+  border-radius: 10px;
+}
+#lists-sidebar::-webkit-scrollbar-corner {
+  display: none;
 }
