--- a/src/toDo.css
+++ b/src/toDo.css
@@ -5,6 +5,8 @@ html {
   --variableHeight: max(15vh, 125px);
   --variableHeight2: 45px;
   --myYellow: hsl(60, 100%, 85%);
+  scrollbar-color: #1e90ff azure;
+  scrollbar-width: auto;
 }
 * {
   box-sizing: content-box;
@@ -19,7 +21,7 @@ body {
   width: 100%;
   height: auto;
   overflow: auto;
-  z-index: 1;
+  z-index: 1;  
 }
 h1 {
   margin: auto;
@@ -163,6 +165,7 @@ select {
 }
 fieldset {
   border-radius: 5px;
+  padding: 5px;
 }
 legend {
   font-size: 1.2rem;
@@ -181,16 +184,13 @@ input {
   margin-left: 15px;
   border: 1px solid black;
 }
-#red-box,
-.high-priority {
+#red-box, .high-priority {
   background-color: hsl(0, 70%, 80%);
 }
-#orange-box,
-.medium-priority {
+#orange-box, .medium-priority {
   background-color: hsl(40, 100%, 70%);
 }
-#green-box,
-.low-priority {
+#green-box, .low-priority {
   background-color: hsl(120, 70%, 80%);
 }
 #lists-sidebar {
@@ -202,6 +202,9 @@ input {
   bottom: 10px;
   overflow: auto;
   z-index: 2;
+  padding-bottom: 10px;
+  scrollbar-color: dodgerblue azure;
+  scrollbar-width: thin;
 }
 #mylists {
   list-style: square inside;
@@ -214,23 +217,18 @@ input {
   width: 70%;
   color: blue;
 }
-a:active,
-a:focus,
-li:focus {
+a:active, a:focus, li:focus {
   font-size: 1.3rem;
   font-weight: bold;
 }
-a,
-a:visited,
-a:active {
+a, a:visited, a:active {
   text-decoration: none;
   color: currentColor;
 }
-#addListButton,
-#addButton {
+#addListButton, #addButton {
   background-color: blue;
   color: white;
-  margin: 13px 0 16px;
+  margin: 16px 0;
   padding: 5px 6px;
   border-radius: 3px;
   font-size: 0.9rem;
@@ -238,15 +236,13 @@ a:active {
   outline: 1px solid blue;
   height: 22px;
 }
-#addListButton:hover,
-#addButton:hover {
+#addListButton:hover, #addButton:hover {
   color: blue;
   background-color: white;
   cursor: pointer;
   border: 2px solid blue;
 }
-#listName,
-#listName:focus {
+#listName, #listName:focus {
   background-color: transparent;
   border: none;
   outline: none;
@@ -315,8 +311,7 @@ a:active {
   z-index: 1;
   height: fit-content;
 }
-#lists-sidebar.mobile-slide,
-#addItemBox.mobile-slide {
+#lists-sidebar.mobile-slide, #addItemBox.mobile-slide {
   width: 60vw;
   position: absolute;
   top: max(18vh, 150px);
@@ -335,8 +330,7 @@ a:active {
   left: -100%;
   transition: left 1s;
 }
-#lists-sidebar.mobile-slide.visible,
-#addItemBox.mobile-slide.visible {
+#lists-sidebar.mobile-slide.visible, #addItemBox.mobile-slide.visible {
   left: 20vw;
   visibility: visible;
   position: absolute;
@@ -373,9 +367,7 @@ a:active {
   border-radius: 4px;
   padding: 2px;
 }
-.mobile-button:hover,
-.mobile-button:active,
-.mobile-button:focus {
+.mobile-button:hover, .mobile-button:active, .mobile-button:focus {
   text-shadow: 1px 1px 2px white;
   background-color: rgb(12, 244, 248);
 }
@@ -408,32 +400,43 @@ a:active {
   color: white;
   background-color: dodgerblue;
 }
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
   width: 15px;
+  height: 15px;
 }
-#lists-sidebar::-webkit-scrollbar {
-  width: 10px; 
+/* borders can be used to create a smaller handle:
+body::-webkit-scrollbar-thumb:horizontal {
+    border-right: 300px solid azure;
+    border-left: 300px solid azure;
 }
-::-webkit-scrollbar-track {
-  background: azure;
-  border-radius: 10px;   
+body::-webkit-scrollbar-thumb:vertical {
+    border-top: 40px solid azure;
+    border-bottom: 40px solid azure;
 }
-::-webkit-scrollbar-thumb {
-  background: dodgerblue;
-  border-radius: 10px;
-  border: 1px solid var(--myBlue);
-  /* how to specify size?*/
-  }  
-::-webkit-scrollbar-corner {
+*/
+body::-webkit-scrollbar-corner {
   background-color: var(--myBlue);
   border-radius: 10px;
 }
 body.mobile::-webkit-scrollbar {
   display: none;
 }
-#lists-sidebar::-webkit-scrollbar-track {
- margin-right: 2px;
+#lists-sidebar::-webkit-scrollbar-track:horizontal {
+ margin-right: 2px; 
+}
+#lists-sidebar::-webkit-scrollbar {
+  width: 9px; 
+  height: 9px;
 }
 #lists-sidebar::-webkit-scrollbar-corner {
   display: none;
+}
+::-webkit-scrollbar-thumb {
+  background: dodgerblue;
+  border-radius: 10px;
+  border: 1px solid var(--myBlue);
+}  
+::-webkit-scrollbar-track {
+  background: azure;
+  border-radius: 10px;   
 }
